[package]
name = "aigc"
version = "0.1.0"
edition = "2021"
author = "ccbond"
rust-version = "1.65.0"
license-file = "LICENSE.txt"
keywords = ["chatgpt"]
categories = ["ai.foundation"]
repository = "https://github.com/SyntSugar/aicg"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
